--- a/src/components/cart-table/cart-table.scss
+++ b/src/components/cart-table/cart-table.scss
@@ -32,6 +32,10 @@
             width: 250px;
             object-fit: cover;
         }
+        &-count {
+            width: 50px;
+            text-align: center;
+        }
     }
     &__close {
         position: absolute;
